# modality

./: .gitignore  ASSET_IMPLEMENTATION_COMPLETE.md  COMMAND_RENAME_SUMMARY.md  CONSENSUS_VALIDATION_SUMMARY.md  CONTRACT_REARCHITECTURE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  MINER_HASH_FUNC_IMPLEMENTATION.md  MODEL_CHECKER_PREDICATE_ARCHITECTURE.md  NETWORK_FILTERING_FEATURE.md  NETWORK_GENESIS_CONTRACT_IMPLEMENTATION.md  NODE_INSPECTION_IMPLEMENTATION.md  NODE_MANAGEMENT_COMMANDS.md  NUMBERED_NETWORK_TESTS_RESULTS.md  README.md  ROADMAP-AGENT-COOPERATION.md  STATUS_PAGE_EPOCH_NOMINEES.md  WASM_PREDICATE_FINAL.md  WASM_PREDICATE_FINAL_REPORT.md  WASM_PREDICATE_FINAL_VERIFICATION.md  WASM_PREDICATE_SUMMARY.md  content-calendar-q1-2026.md  docs  package-lock.json  shoal-consensus-implementation.plan.md
examples/network/orphan-detection/: Cargo.toml  README.md  test.sh
modality/: Cargo.toml
modality-network-consensus/: Cargo.toml
modality-network-consensus/src/: consensus_math.rs  lib.rs  runner.rs
modality-network-consensus/src/communication/: mod.rs  same_process.rs
modality-network-consensus/src/sequencing/: mod.rs  static_authority.rs
modality-network-consensus/tests/: runner.rs
modality-network-consensus/tests/communication/: mod.rs  same_process.rs
modality-network-datastore/: Cargo.toml
modality-network-datastore/src/: lib.rs  model.rs  network_datastore.rs
modality-network-datastore/src/models/: block_header.rs  block_message.rs  mod.rs  page.rs  round.rs  round_message.rs
modality-network-datastore/tests/: devnet1.rs  network_datastore.rs
modality-network-datastore/tests/models/: block.rs  block_header.rs  block_message.rs  mod.rs  page.rs  round.rs  round_message.rs
modality-network-devnet/: Cargo.toml
modality-network-devnet/src/: lib.rs
modality-network-devnet/tests/: mod.rs
modality-network-node/: Cargo.toml
modality-network-node/fixtures/configs/: node2.json
modality-network-node/src/: config.rs  config_file.rs  hash_tax.rs  identity_utils.rs  main.rs  node.rs  swarm.rs
modality-network-node/src/actions/: mod.rs
modality-network-node/src/cmds/: mod.rs  ping.rs  publish_gossip.rs  request.rs  run.rs  run_sequencer.rs
modality-network-node/src/gossip/: mod.rs
modality-network-node/src/reqres/: mod.rs
modality-utils/: Cargo.toml
modality-utils/src/: encrypted_text.rs  hash_tax.rs  json_stringify_deterministic.rs  keypair.rs  lib.rs  libp2p_identity_keypair.rs  multiaddr_list.rs  passkey.rs
modality-utils/tests/: json_stringify_deterministic.rs  keypair.rs
modality/src/: main.rs
modality/src/cmds/: create_id.rs  decrypt_passkey.rs  decrypt_passkeys.rs  encrypt_passkey.rs  encrypt_passkeys.rs  mod.rs
rust/: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
rust/.cursor/rules/: general.mdc
rust/examples/: correlate_demo.rs
rust/fixtures/: .gitignore
rust/fixtures/passkeys/: node3.mod_passkey
rust/modal/: Cargo.toml  README.md  build.rs
rust/modal-common/: Cargo.toml
rust/modal-common/examples/: shuffle_demo.rs
rust/modal-common/src/: encrypted_text.rs  hash_tax.rs  hub_client.rs  json_stringify_deterministic.rs  keypair.rs  lib.rs  merkle.rs  mnemonic.rs  multiaddr_list.rs  passfile.rs  shuffle.rs
rust/modal-common/tests/: json_stringify_deterministic.rs  keypair.rs
rust/modal-datastore/: Cargo.toml
rust/modal-datastore/docs/: MINER_BLOCK.md
rust/modal-datastore/examples/: create_test_blocks.rs  miner_block_usage.rs  show_difficulty.rs
rust/modal-datastore/src/: datastore_manager.rs  lib.rs  model.rs  model_ext.rs  network_datastore.rs  network_params.rs
rust/modal-datastore/tests/: devnet1.rs  network_datastore.rs  static_validators_integration.rs
rust/modal-devnet/: Cargo.toml
rust/modal-devnet/src/: lib.rs
rust/modal-devnet/tests/: mod.rs
rust/modal-miner/: Cargo.toml  FORK_CHOICE.md  FORK_CHOICE_INTEGRATION_SUMMARY.md  PERSISTENCE.md  README.md
rust/modal-miner/examples/: basic_usage.rs  epoch_shuffle_demo.rs  persistence_demo.rs
rust/modal-miner/src/: block.rs  chain.rs  epoch.rs  error.rs  fork_choice.rs  lib.rs  miner.rs  persistence.rs  tests.rs
rust/modal-miner/tests/: integration_tests.rs
rust/modal-mining/: Cargo.toml  PERSISTENCE.md  README.md
rust/modal-mining/examples/: basic_usage.rs  epoch_shuffle_demo.rs  persistence_demo.rs
rust/modal-mining/src/: block.rs  epoch.rs  lib.rs
rust/modal-mining/tests/: integration_tests.rs
rust/modal-networks/: .gitignore  Cargo.toml  IMPLEMENTATION.md  MIGRATION.md  README.md
rust/modal-networks/scripts/: manage-dns.sh
rust/modal-networks/src/: dns.rs  lib.rs  main.rs
rust/modal-node/: Cargo.toml
rust/modal-node/docs/: AUTOUPGRADE.md  AUTO_SYNC.md  CHAIN_SYNC.md  DAG_SYNC_NETWORK.md  DAG_SYNC_NETWORK_SUMMARY.md  MINER_BLOCK_SYNC.md  MINER_NOMINEES.md
rust/modal-node/examples/: miner_block_sync.rs
rust/modal-node/src/: bootup.rs  config.rs  config_resolution.rs  constants.rs  inspection.rs  lib.rs  mining_metrics.rs  node.rs  pid.rs  status_server.rs  swarm.rs
rust/modal-observer/: Cargo.toml  README.md  TEST_COVERAGE.md
rust/modal-observer/src/: error.rs  (+2 more)
rust/modal-rpc/: Cargo.toml  README.md
rust/modal-sequencer/: Cargo.toml  README.md
rust/modal-sequencer-consensus/: Cargo.toml
rust/modal-validator/: Cargo.toml  README.md
rust/modal-validator-consensus/: Cargo.toml
rust/modal-wasm-runtime/: Cargo.toml  README.md
rust/modal-wasm-validation/: Cargo.toml  build-predicates.sh  package.json
rust/modality/: Cargo.toml  README.md  build.rs
rust/modality-lang/: .gitignore  BNF.md  Cargo.toml  README.md  build.rs  package.json  simple_test.modality  test.modality
rust/modality-lsp/: Cargo.toml  README.md
rust/modality-network-consensus/: Cargo.toml
rust/modality-network-datastore/: Cargo.toml
rust/modality-network-devnet/: Cargo.toml  keypairs.json
rust/modality-network-mining/: Cargo.toml  PERSISTENCE.md  README.md
rust/modality-network-node/: Cargo.toml
rust/modality-network-sequencing/: Cargo.toml  README.md
rust/modality-utils/: Cargo.toml
(+1293 files in other folders)
