[package]
name = "modality-network-datastore"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.20"
regex = "1.5" 

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"