[package]
name = "modality-network-datastore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.20"
regex = "1.5" 
modality-utils = { path = "../modality-utils" }
uuid = { version = "1.10.0", features = ["v4"] }
tempfile = "3.5"

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"
tokio = { version = "1.42", features = ["full", "test-util"] }
zip = "0.6"