[package]
name = "modality-network-node"
version = "0.1.5"
edition = "2021"
description = "Modality network node lib"
license = "MIT"
repository = "https://github.com/modality-org/modality-rust"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-request-response = { version = "0.26.2", features = ["cbor", "json"] }
anyhow = "1.0"
clap = { version = "4.1.11", features = ["cargo", "derive", "env"] }
env_logger = "0.10.0"
futures = "0.3.27"
futures-timer = "3.0.2"
libp2p = { version = "0.54.1", features = [
  "identify",
  "ping",
  "tokio",
  "gossipsub",
  "macros",
  "relay",
  "kad",
  "rsa",
  "ed25519",
  "quic",
  "request-response",
  "dns",
  "tcp",
  "memory-connection-limits",
  "noise",
  "yamux",
  "plaintext",
  "tls",
  "websocket",
  "json",
  "mdns",
  "dns",
] }
libp2p-identity = { version = "0.2.9", features = ["ed25519", "peerid"] }
# libp2p-webrtc = { version = "0.6.0-alpha", features = ["tokio", "pem"] }
libp2p-noise = "0.44.0"
libp2p-yamux = "0.45.1"
libp2p-tls = "0.3.0"
libp2p-relay = "0.17.2"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.68"
serde = "1.0.200"
serde_json = "1.0.116"
base64 = "0.22.1"
zeroize = "1.7.0"
# libp2p-stream = "0.1.0-alpha"
modality-utils = { path = "../modality-utils", version = "0.1.4" }