[package]
name = "modality-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
num-bigint = "0.4.5"
num-traits = "0.2.19"
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.51", features = ["ed25519", "identify"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base58 = "0.2"
base64 = "0.13"
ed25519-dalek = "1.0"
rand = "0.8"
multihash = "0.18"
regex = "1.5"
log = "0.4.17"