[workspace]
resolver = "2"

members = [
  'modality-network-consensus'
, 'modal-datastore'
, 'modality-network-devnet'
, 'modal-miner'
, 'modality-network-node'
, 'modal-observer'
, "modality-utils"
, "modality"
, "modality-lang"
, "modal"
, "modal-networks"]

[profile.release]
strip = true
lto = true





