[workspace]
resolver = "2"

members = [
  'modal-sequencer-consensus'
, 'modal-datastore'
, 'modal-devnet'
, 'modal-miner'
, 'modal-node'
, 'modal-observer'
, 'modal-sequencer'
, "modal-common"
, "modality"
, "modality-lang"
, "modal"
, "modal-networks"]

[profile.release]
strip = true
lto = true





