[workspace]
resolver = "2"

members = [
  'modal-validator-consensus'
, 'modal-datastore'
, 'modal-devnet'
, 'modal-miner'
, 'modal-node'
, 'modal-observer'
, 'modal-validator'
, "modal-common"
, "modality"
, "modality-lang"
, "modality-lsp"
, "modal-rpc"
, "modal"
, "modal-networks"
, "modal-wasm-runtime"
, "modal-wasm-validation"]

[profile.release]
strip = true
lto = true
