[package]
name = "modal-datastore"
version = "0.1.0"
edition = "2021"
description = "Network datastore for Modality"
license = "MIT"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.20"
regex = "1.5" 
chrono = { version = "0.4", features = ["serde"] }
modal-common = { path = "../modal-common", version = "0.1.5" }
uuid = { version = "1.10.0", features = ["v4"] }
tempfile = "3.5"
log = "0.4.17"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dependencies.base64ct]
version = "=1.6.0"

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"
tokio = { version = "1.42", features = ["full", "test-util"] }
zip = "0.5"
modal-devnet = { path = "../modal-devnet" }