[package]
name = "modal-miner"
version = "0.1.0"
edition = "2021"
description = "Proof-of-work blockchain mining for Modality"
license = "MIT"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1"
log = "0.4"
modal-common = { path = "../modal-common", version = "0.1.6" }
modal-datastore = { path = "../modal-datastore", version = "0.1.0", optional = true }
modal-observer = { path = "../modal-observer", version = "0.1.0", optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[dev-dependencies]
tempfile = "3.5"
tokio = { version = "1", features = ["rt", "macros"] }
env_logger = "0.11"

[features]
default = []
persistence = ["modal-datastore", "modal-observer", "async-trait", "tokio"]

