[package]
name = "modal-rpc"
version = "0.1.0"
edition = "2021"
description = "RPC interface for Modal Money hubs and networks"
license = "MIT"
repository = "https://github.com/modality-org/modality"

[lib]
name = "modal_rpc"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP server (for REST fallback)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
