[package]
name = "modal-sequencer-consensus"
version = "0.1.0"
edition = "2021"
description = "Network consensus for Modality"
license = "MIT"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7.0"
futures = "0.3"
async-trait = "0.1.68"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
regex = "1.5" 
modal-datastore = { path = "../modal-datastore", version = "0.1.0" }
modal-common = { path = "../modal-common", version = "0.1.5" }
uuid = { version = "1.10.0", features = ["v4"] }
async-mutex = "1.4"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
libp2p-identity = { version = "0.2", features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"
tokio = { version = "1.42", features = ["full", "test-util"] }
zip = "0.6"
modal-devnet = { path = "../modal-devnet" }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "consensus_benchmarks"
harness = false

[features]
default = []
persistence = []