[package]
name = "modal-validator"
version = "0.1.0"
edition = "2021"
description = "Blockchain validator for Modality - observes mining chain without mining"
license = "MIT"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
modal-observer = { path = "../modal-observer", version = "0.1.0" }
modal-datastore = { path = "../modal-datastore", version = "0.1.0" }
modal-validator-consensus = { path = "../modal-validator-consensus", version = "0.1.0" }
libp2p-identity = { version = "0.2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
env_logger = "0.11"
tempfile = "3.5"

[features]
default = []
persistence = ["modal-validator-consensus/persistence"]