[package]
name = "modal-wasm-runtime"
version = "0.1.0"
edition = "2021"
description = "WASM runtime for executing user-defined contract validation logic"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmtime = "26.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
sha2 = "0.10"

# WASM bindings (for compiling this crate to WASM if needed)
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full", "test-util"] }

