[package]
name = "modal-wasm-validation"
version = "0.1.0"
edition = "2021"
description = "Built-in validation logic for Modality contracts (WASM + native)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
base64 = "0.22"

# Ed25519 signature verification
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full", "test-util"] }
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ["-O", "--enable-bulk-memory"]