[package]
name = "modal"
version = "0.1.0"
edition = "2021"
description = "Modal CLI utility"
license = "MIT"
documentation = "https://docs.rs/modal"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modality = { path = "../modality", version = "0.1.7" }
modal-common = { path = "../modal-common", version = "0.1.7" }
modal-node = { path = "../modal-node", version = "0.1.7" }
modal-datastore = { path = "../modal-datastore", version = "0.1.0" }
modal-networks = { path = "../modal-networks", version = "0.1.0" }
anyhow = "1.0"
clap = { version = "4.1.11", features = ["cargo", "derive", "env"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.68"
serde = "1.0.200"
serde_json = "1.0.116"
rand = "0.8"
chrono = "0.4"
log = "0.4.17"
sha2 = "0.10"
libp2p = { version = "0.54.1", features = ["macros", "tokio", "tcp", "noise", "yamux", "gossipsub", "request-response", "kad", "ping", "identify", "rendezvous", "relay", "dns", "websocket"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

