[package]
name = "modality-lang"
version = "0.1.7"
edition = "2021"
description = "Modality language lib"
license = "MIT"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

[lib]
name = "modality_lang"
crate-type = ["cdylib", "rlib"]

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer"] }

# WASM dependencies
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
modality-utils = { path = "../modality-utils", version = "0.1.5" }
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full", "test-util"] }
wasm-bindgen-test = "0.3"