[package]
name = "modality-network-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7.0"
async-trait = "0.1.68"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5" 
modality-network-datastore = { path = "../modality-network-datastore" }
modality-utils = { path = "../modality-utils" }
uuid = { version = "1.10.0", features = ["v4"] }
async-mutex = "1.4"
log = "0.4"

[dev-dependencies]
tempfile = "3.5"
tokio-test = "0.4"
tokio = { version = "1.42", features = ["full", "test-util"] }
zip = "0.6"
modality-network-devnet = { path = "../modality-network-devnet" }