[package]
name = "modality-network-mining"
version = "0.1.0"
edition = "2021"
description = "Proof-of-work blockchain mining for Modality"
license = "MIT"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
documentation = "https://docs.rs/modality"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
modality-utils = { path = "../modality-utils", version = "0.1.5" }

[dev-dependencies]
tempfile = "3.5"

