[package]
name = "modality"
version = "0.1.6"
edition = "2021"
description = "CLI for Modality, an evolving temporal modal logic"
license = "MIT"
documentation = "https://docs.rs/modality"
repository = "https://github.com/modality-org/modality-rust"
homepage = "https://www.modality.org"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modality-utils = { path = "../modality-utils", version = "0.1.6" }
modality-network-node = { path = "../modality-network-node", version = "0.1.5" }
modality-lang = { path = "../modality-lang", version = "0.1.6" }
anyhow = "1.0"
clap = { version = "4.1.11", features = ["cargo", "derive", "env"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1.68"
serde = "1.0.200"
serde_json = "1.0.116"
rpassword = "7.0"
dirs = "5.0"
env_logger = "0.11.5"
log = "0.4.17"
rand = "0.8"