[package]
name = "modality"
version = "0.1.7"
edition = "2021"
description = "CLI for Modality, an evolving temporal modal logic"
license = "MIT"
documentation = "https://docs.rs/modality"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
readme = "../README.md"

[lib]
name = "modality"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modal-common = { path = "../modal-common", version = "0.1.7" }
modal-node = { path = "../modal-node" }
modal-datastore = { path = "../modal-datastore" }
modality-lang = { path = "../modality-lang", version = "0.1.7" }
anyhow = "1.0"
clap = { version = "4.1.11", features = ["cargo", "derive", "env"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = "1.0.200"
serde_json = "1.0.116"
rpassword = "7.0"
dirs = "5.0"
env_logger = "0.11.5"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
self-replace = "1.3"
openssl = { version = "0.10", features = ["vendored"] }
libp2p = { version = "0.54.1" }
