[package]
name = "modality"
version = "0.1.7"
edition = "2021"
description = "CLI for Modality, an evolving temporal modal logic"
license = "MIT"
documentation = "https://docs.rs/modality"
repository = "https://github.com/modality-org/modality"
homepage = "https://www.modality.org"
readme = "../README.md"

[lib]
name = "modality"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modality-lang = { path = "../modality-lang", version = "0.1.7" }
anyhow = "1.0"
clap = { version = "4.1.11", features = ["cargo", "derive", "env"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.116"

modal-common = { path = "../modal-common", version = "0.1.7", optional = true }
modal-node = { path = "../modal-node", optional = true }
modal-datastore = { path = "../modal-datastore", optional = true }
dirs = { version = "5.0", optional = true }
libp2p = { version = "0.54.1", optional = true }
log = { version = "0.4.17", optional = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }
rpassword = { version = "7.0", optional = true }
self-replace = { version = "1.3", optional = true }
serde = { version = "1.0.200", features = ["derive"], optional = true }

[features]
default = []
contract = ["dep:modal-common"]
identity = ["dep:dirs", "dep:modal-common", "dep:rpassword"]
node = ["dep:libp2p", "dep:log", "dep:modal-datastore", "dep:modal-node"]
passfile = ["dep:modal-common", "dep:rpassword"]
upgrade = ["dep:reqwest", "dep:self-replace", "dep:serde"]
full = ["contract", "identity", "node", "passfile", "upgrade"]
